update test to cover code